[package]
name = "CAIE_Code"
version = "0.2.0"
edition = "2021"
description = "An Interpreter for CAIE Pseudocode"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
rustpython = { version = "0.3.1", features = ["freeze-stdlib", "ssl"] }
rustpython-vm = { version = "0.3.1", features = ["freeze-stdlib", "jit"] }
